--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">Software Development</li>
+              <li data-filter=".filter-card">Web Development</li>
+              <li data-filter=".filter-web">Video Editing</li>
             </ul>
           </div>
         </div>
@@ -358,8 +358,11 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/gambling-game.png" class="img-fluid" alt="">
+              <div class="box"></div>
+              <p style="text-align: center;"><b>Gambling Game </b></p>
               <div class="portfolio-links">
+                
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
