--- a/index.html
+++ b/index.html
@@ -347,38 +347,30 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Software Development</li>
-              <li data-filter=".filter-card">Web Development</li>
-              <li data-filter=".filter-web">Video Editing</li>
+              <li data-filter=".filter-software-dev">Software Development</li>
+              <li data-filter=".filter-web-dev">Web Development</li>
+              <li data-filter=".filter-video-edit">Video Editing</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/gambling-game.png" class="img-fluid" alt="">
-              <div class="box"></div>
-              <p style="text-align: center;"><b>Gambling Game </b></p>
-              <div class="portfolio-links">
-                
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-software-dev">
+            <img src="assets/img/portfolio/gambling-game.png" class="img-fluid" alt="">
+              <hr>
+              <p style="text-align: center;"><b> <a href="https://github.com/rile037/luckyBalls" target="_blank">Gambling System </a></b></p>
+              <hr>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-software-dev">
+            <img src="assets/img/portfolio/employe.jpg" class="img-fluid" alt="">
 
+            <hr>
+            <p style="text-align: center;"><b> <a href="https://github.com/rile037/luckyBalls" target="_blank">Employee Identification Software </a></b></p>
+            <hr>
+        </div>
+          <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
@@ -448,13 +440,15 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
               </div>
             </div>
           </div>
-
+-->
         </div>
 
       </div>
     </section><!-- End Portfolio Section -->
 
+
     <!-- ======= Services Section ======= -->
+        <!--
     <section id="services" class="services">
       <div class="container">
 
@@ -497,8 +491,8 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
         </div>
 
       </div>
-    </section><!-- End Services Section -->
-
+    </section>
+  -->
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
