--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              
+             
             </p>
           </div>
         </div>
@@ -340,7 +340,7 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>With over 5 years of experinece in various areas of IT, I made many projects. From web applications and android apps to the youtube videos and adverts.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -370,6 +370,14 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
             <p style="text-align: center;"><b> <a href="https://github.com/rile037/luckyBalls" target="_blank">Employee Identification Software </a></b></p>
             <hr>
         </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-software-dev">
+          <img src="assets/img/portfolio/smrsaj-lako.jpg" class="img-fluid" alt="">
+
+          <hr>
+          <p style="text-align: center;"><b> <a href="https://play.google.com/store/apps/details?id=com.smrsajlako" target="_blank">Android Health Application </a></b></p>
+          <hr>
+      </div>
           <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -493,7 +501,7 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
       </div>
     </section>
   -->
-    <!-- ======= Testimonials Section ======= -->
+    <!-- ======= Testimonials Section 
     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
@@ -516,7 +524,7 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
                 <h3>Saul Goodman</h3>
                 <h4>Ceo &amp; Founder</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div><End testimonial item 
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
@@ -529,7 +537,7 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
                 <h3>Sara Wilsson</h3>
                 <h4>Designer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>End testimonial item 
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
@@ -542,7 +550,7 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
                 <h3>Jena Karlis</h3>
                 <h4>Store Owner</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div> End testimonial item 
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
@@ -555,7 +563,7 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
                 <h3>Matt Brandon</h3>
                 <h4>Freelancer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </divEnd testimonial item 
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
@@ -568,7 +576,7 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </divEnd testimonial item -->
 
           </div>
           <div class="swiper-pagination"></div>
@@ -577,7 +585,7 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
       </div>
     </section><!-- End Testimonials Section -->
 
-    <!-- ======= Contact Section ======= -->
+    <!-- ======= Contact Section ======= 
     <section id="contact" class="contact">
       <div class="container">
 
@@ -645,25 +653,25 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section End Contact Section -->
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
+  <!-- ======= Footer ======= 
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span></span></strong>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+         All the links in the footer should remain intact. 
+         You can delete the links only if you purchased the pro version. 
+         Licensing information: https://bootstrapmade.com/license/ 
+         Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ 
+        Designed by <a href="https://bootstrapmade.com/">Nikola Rilak</a>
       </div>
     </div>
-  </footer><!-- End  Footer -->
+  </footer> End  Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
