--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- Favicons 
 
-  <!-- Google Fonts -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
+  <link rel="icon" href="http://www.yoursite.com/favicon.ico?v=2" />
+
+
+  Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
@@ -656,6 +659,7 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
     </section End Contact Section -->
 
   </main><!-- End #main -->
+
 
   <!-- ======= Footer ======= 
   <footer id="footer">
