--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Nikola Rilak</h1>
-      <p>I'm <span class="typed" data-typed-items="Software Developer, Video Editor, Freelancer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Software Developer, Web Developer, Video Editor"></span></p>
     </div>
   </section><!-- End Hero -->
 
