--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ Advanced knowledge in:
 <li><b>SOFTWARE DEVELOPER:</b></li>
 I started coding back in 2015, my first project was <b>C#</b> <i>folder locker</i> on windows OS. After that first project, I showed lot of interest in <b>web development</b>, building few websites like <i>portfolios</i> and <i>landing-pages</i>.
 <br>As time was flying by, I started working on some more serious projects, some of them are <i>web shop</i> and <i>admin web page</i> with database support. I also got chance to built some <i>wordpress/joomla websites</i>, so I am pretty much capable of building websites.
-<br>In last year, I was improving my <b>Python</b> and <b>Django</b> skills and I made some projects as well, some of them are <i>Gambling System</i> and <i>Employee Identification Software</i> that I have successfully commercialized. 
+<br>In last year, I was improving my <b>Python</b> skills and I made some projects as well, some of them are <i>Gambling System</i> and <i>Employee Identification Software</i> that I have successfully commercialized. 
 
 <br>
 <br>
