--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Nikola Rilak</h1>
-      <p>I'm <span class="typed" data-typed-items="Software Developer, Web Developer, Video Editor"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Software Developer, Video Editor"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -130,7 +130,7 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>I have done many projects in several different areas like software development, web development and video editing.</p>
+          <p>I have done many projects in areas like software development and video editing.</p>
         </div>
 
         <div class="row no-gutters">
@@ -142,7 +142,7 @@
               <p><strong>Software Development</strong><br>Python, SQL</p>
             </div>
           </div>
-
+<!--
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-file-earmark-code-fill"></i>
@@ -150,7 +150,7 @@
               <p><strong>Web Development</strong><br> HTML, CSS, JS</p>
             </div>
           </div>
-
+-->
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-camera-reels"></i>
@@ -351,7 +351,6 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-software-dev">Software Development</li>
-              <li data-filter=".filter-web-dev">Web Development</li>
               <li data-filter=".filter-video-edit">Video Editing</li>
             </ul>
           </div>
