--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>With over 5 years of experinece in various areas of IT, I made many projects. From web applications and android apps to the youtube videos and adverts.</p>
+          <p>With over 5 years of experinece in various areas of IT, I made many projects. From desktop applications and android apps to the youtube videos and adverts.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -380,6 +380,33 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
           <p style="text-align: center;"><b> <a href="https://play.google.com/store/apps/details?id=com.smrsajlako" target="_blank">Android Health Application </a></b></p>
           <hr>
       </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+        <iframe width="378" height="250"
+src="https://youtube.com/embed/cluJBNzNO-M">
+</iframe>
+        <hr>
+        <p style="text-align: center;"><b> <a href="#" target="_blank">Lyrics video </a></b></p>
+        <hr>
+    </div>
+
+    <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+      <iframe width="378" height="250"
+src="https://youtube.com/embed/cluJBNzNO-M">
+</iframe>
+      <hr>
+      <p style="text-align: center;"><b> <a href="#" target="_blank">Lyrics video </a></b></p>
+      <hr>
+  </div>
+
+  <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+    <iframe width="378" height="250"
+src="https://youtube.com/embed/cluJBNzNO-M">
+</iframe>
+    <hr>
+    <p style="text-align: center;"><b> <a href="#" target="_blank">Lyrics video </a></b></p>
+    <hr>
+</div>
           <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
