--- a/index.html
+++ b/index.html
@@ -382,30 +382,54 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
       </div>
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
-        <iframe width="378" height="250"
+        <iframe
 src="https://youtube.com/embed/cluJBNzNO-M">
 </iframe>
         <hr>
-        <p style="text-align: center;"><b> <a href="#" target="_blank">Lyrics video </a></b></p>
+        <p style="text-align: center;"><b> <a href="#" target="_blank">Renegade Angel - Forevermore (Music/Lyrics video)</a></b></p>
         <hr>
     </div>
 
-    <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
-      <iframe width="378" height="250"
-src="https://youtube.com/embed/cluJBNzNO-M">
+    <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit" >
+      <iframe
+src="https://youtube.com/embed/F7xszLB0TBI">
 </iframe>
       <hr>
-      <p style="text-align: center;"><b> <a href="#" target="_blank">Lyrics video </a></b></p>
+      <p style="text-align: center;"><b> <a href="#" target="_blank">Renegade Angel - The Whistleblower (Music/Lyrics Video)</a></b></p>
       <hr>
   </div>
 
   <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
-    <iframe width="378" height="250"
-src="https://youtube.com/embed/cluJBNzNO-M">
+    <iframe
+src="https://youtube.com/embed/lypSXntf21M">
 </iframe>
     <hr>
-    <p style="text-align: center;"><b> <a href="#" target="_blank">Lyrics video </a></b></p>
+    <p style="text-align: center;"><b> <a href="#" target="_blank">Python Numbers: Integers, Floats, and Arithmetic Operations</a></b></p>
     <hr>
+</div>
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <iframe
+src="https://youtube.com/embed/bbpXuQL7LmI">
+</iframe>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Python Boolean Data Types, Comparison Operations, and Logical Operations  </a></b></p>
+  <hr>
+</div>
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <iframe
+src="https://youtube.com/embed/tEyxCT1MLVw">
+</iframe>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Automate Asking about the Weather with Python</a></b></p>
+  <hr>
+</div>
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <iframe
+src="https://youtube.com/embed/slHzJh6pGo8">
+</iframe>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">8 Tips to SKYROCKET your Python Productivity on VS Code</a></b></p>
+  <hr>
 </div>
           <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
