--- a/index.html
+++ b/index.html
@@ -359,14 +359,16 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-software-dev">
-            <img src="assets/img/portfolio/gambling-game.png" class="img-fluid" alt="">
+            <div class="videoWrapper">
+            <img src="assets/img/portfolio/gambling-game.png" class="img-fluid" alt=""></div>
               <hr>
               <p style="text-align: center;"><b> <a href="https://github.com/rile037/luckyBalls" target="_blank">Gambling System </a></b></p>
               <hr>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-software-dev">
-            <img src="assets/img/portfolio/employe.jpg" class="img-fluid" alt="">
+            <div class="videoWrapper">
+              <img src="assets/img/portfolio/employe.jpg" class="img-fluid" alt=""></div>
 
             <hr>
             <p style="text-align: center;"><b> <a href="https://github.com/rile037/luckyBalls" target="_blank">Employee Identification Software </a></b></p>
@@ -374,7 +376,8 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-software-dev">
-          <img src="assets/img/portfolio/smrsaj-lako.jpg" class="img-fluid" alt="">
+          <div class="videoWrapper">
+          <img src="assets/img/portfolio/smrsaj-lako.jpg" class="img-fluid" alt=""></div>
 
           <hr>
           <p style="text-align: center;"><b> <a href="https://play.google.com/store/apps/details?id=com.smrsajlako" target="_blank">Android Health Application </a></b></p>
@@ -382,55 +385,215 @@ Choosing to work with me, you will not get hit by any of the typical workflow is
       </div>
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
-        <iframe
+        <div class="videoWrapper">
+        <iframe class="iframe"
 src="https://youtube.com/embed/cluJBNzNO-M">
-</iframe>
+</iframe></div>
         <hr>
-        <p style="text-align: center;"><b> <a href="#" target="_blank">Renegade Angel - Forevermore (Music/Lyrics video)</a></b></p>
+        <p style="text-align: center;"><b> <a href="#" target="_blank">Renegade Angel - Forevermore</a></b></p>
         <hr>
     </div>
 
     <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit" >
+      <div class="videoWrapper">
       <iframe
 src="https://youtube.com/embed/F7xszLB0TBI">
-</iframe>
+</iframe></div>
       <hr>
-      <p style="text-align: center;"><b> <a href="#" target="_blank">Renegade Angel - The Whistleblower (Music/Lyrics Video)</a></b></p>
+      <p style="text-align: center;"><b> <a href="#" target="_blank">Renegade Angel - The Whistleblower</a></b></p>
       <hr>
   </div>
 
   <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
-    <iframe
+    <div class="videoWrapper">
+      <iframe
 src="https://youtube.com/embed/lypSXntf21M">
-</iframe>
+</iframe></div>
     <hr>
-    <p style="text-align: center;"><b> <a href="#" target="_blank">Python Numbers: Integers, Floats, and Arithmetic Operations</a></b></p>
+    <p style="text-align: center;"><b> <a href="#" target="_blank">Python Numbers</a></b></p>
     <hr>
 </div>
 <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
-  <iframe
+  <div class="videoWrapper">
+    <iframe
 src="https://youtube.com/embed/bbpXuQL7LmI">
-</iframe>
+</iframe></div>
   <hr>
-  <p style="text-align: center;"><b> <a href="#" target="_blank">Python Boolean Data Types, Comparison Operations, and Logical Operations  </a></b></p>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Python Boolean Data </a></b></p>
   <hr>
 </div>
 <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
-  <iframe
+  <div class="videoWrapper">
+    <iframe
 src="https://youtube.com/embed/tEyxCT1MLVw">
-</iframe>
+</iframe></div>
   <hr>
-  <p style="text-align: center;"><b> <a href="#" target="_blank">Automate Asking about the Weather with Python</a></b></p>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Automate Python</a></b></p>
   <hr>
 </div>
+
 <div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
-  <iframe
+  <div class="videoWrapper"><iframe
 src="https://youtube.com/embed/slHzJh6pGo8">
-</iframe>
+</iframe></div>
   <hr>
-  <p style="text-align: center;"><b> <a href="#" target="_blank">8 Tips to SKYROCKET your Python Productivity on VS Code</a></b></p>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">8 Tips VS Code</a></b></p>
   <hr>
 </div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper"><iframe
+src="https://youtube.com/embed/ujVcpBXKJ1I">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Mattia - Promote And Scale</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper"><iframe
+src="https://youtube.com/embed/6gPnIziVxNI">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Gary - Promote And Scale
+  </a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper"><iframe
+src="https://youtube.com/embed/yqiUN-FaSpg">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Dylan - Promote And Scale</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper"><iframe
+src="https://youtube.com/embed/Zww9CSBuqDI">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Ovotaris advert</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper"><iframe
+src="https://youtube.com/embed/uZR6PQeG_8k">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Aknolin advert #1</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper"><iframe
+src="https://youtube.com/embed/5q1tcTN1E7Q">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Ovotaris instagram AD</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper"><iframe
+src="https://youtube.com/embed/o28UnIVPPBc">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Aknolin advert #2</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper"><iframe
+src="https://youtube.com/embed/Mif4BcrpX3o">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Minut Za Mene advert</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+ <div class="videoWrapper"> <iframe
+src="https://youtube.com/embed/V31izxQQ2vk">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Jewerly Advert</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper"><iframe
+src="https://youtube.com/embed/fa3Xlw8_iTQ">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Minut Za Mene - 1#</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper">  <iframe
+src="https://youtube.com/embed/zQaVimmAaMU">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Minut Za Mene - 2#</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper">  <iframe
+src="https://youtube.com/embed/XK2SuHMkDVE">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Minut Za Mene - 3#</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper">  <iframe
+src="https://youtube.com/embed/2aoQLTmJAWo">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Minut Za Mene - 4#</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper">  <iframe
+src="https://youtube.com/embed/mH_DhLFRRLI">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Cysecor video</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper"> <iframe
+src="https://youtube.com/embed/PEr5c62NFfo">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Minut Za Mene - 5#</a></b></p>
+  <hr>
+</div>  
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper"> <iframe
+src="https://youtube.com/embed/2cWf4Rhherc">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Minut Za Mene - 6#</a></b></p>
+  <hr>
+</div>
+
+<div class="col-lg-4 col-md-6 portfolio-item filter-video-edit">
+  <div class="videoWrapper"> <iframe
+src="https://youtube.com/embed/wdPewNGvrpo">
+</iframe></div>
+  <hr>
+  <p style="text-align: center;"><b> <a href="#" target="_blank">Minut Za Mene - 7#</a></b></p>
+  <hr>
+</div>  
           <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
